# Smart-Home---OOP-Lab-Project

./: CMakeLists.txt  README.md
arduino/: SmartHome_Light.ino
src/: arduinocontroller.cpp  arduinocontroller.h  dashboardwindow.cpp  dashboardwindow.h  database.cpp  database.h  devicecard.cpp  devicecard.h  edithousewindow.cpp  edithousewindow.h  loginwindow.cpp  loginwindow.h  main.cpp  registerwindow.cpp  registerwindow.h  scheduledialog.cpp  scheduledialog.h
